--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "moment": "^2.18.1",
+    "node-cron": "^1.1.3",
+    "nodejs-mysql": "^0.1.3",
+    "request": "^2.81.0",
     "socket.io": "^1.7.3",
     "underscore": "^1.8.3"
   }
